--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <a href="http://twitter.com/abad" target="_blank" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
         <a href="http://facebook.com/abadfederico" target="_blank" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
         <a href="http://dribbble.com/abad" target="_blank" class="dribbble"><i class="fa fa-dribbble fa-2x"></i></a>
+        <a href="http://github.com/abad" target="_blank" class="github"><i class="fa fa-github fa-2x"></i></a>
         <a href="http://instagram.com/abadfederico" target="_blank" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
         <a href="http://ar.linkedin.com/in/abadfederico/" target="_blank" class="linkedin"><i class="fa fa-linkedin fa-2x"></i></a>
       </div>
