--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   </script>
   <script>
-    $(function() { $('img[old-src]').forEach(function(i, src) { new Image(src) }); });
+    $(function() { $('img[old-src]').each(function(i, src) { new Image(src) }); });
   </script>
 </body>
 </html>
