--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </svg>
 
       </h1>
-      <p class="lead">Pixelfucker from Buenos Aires, Argentina. Currently working for Buenos Aires City Government.</p>
+      <p class="lead">Pixelfucker from Buenos Aires, Argentina. Currently working at Xapo.</p>
       <div class="social">
         <a href="http://twitter.com/abad" target="_blank" class="twitter"><i class="fa fa-twitter fa-2x"></i></a>
         <a href="http://facebook.com/abadfederico" target="_blank" class="facebook"><i class="fa fa-facebook fa-2x"></i></a>
