--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img class="appicon" src="img/ba-dark.svg" />
       <img class="appicon" src="img/taringa-dark.svg" />
       <br />
-      <a href="www.linkedin.com/in/abadfederico" target="_blank">
+      <a href="http://www.linkedin.com/in/abadfederico/" target="_blank">
         <img class="sign" src="img/sign@2x.png" />
       </a>
     </div>
