--- a/index.html
+++ b/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-     <title>Abad Federico - Designing for Experience</title>
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <meta name="author" content="">
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
-    <!-- Fav and touch icons -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <!-- Place in the <head>, after the three links -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abad Federico * Human</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div class="content">
-      <img class="appicon" src="img/brubank-dark.svg" />
-      <img class="appicon" src="img/xapo-dark.svg" />
-      <img class="appicon" src="img/popcorn-dark.svg" />
-      <img class="appicon" src="img/ba-dark.svg" />
-      <img class="appicon" src="img/taringa-dark.svg" />
-      <br />
-      <a href="http://www.linkedin.com/in/abadfederico/" target="_blank">
-        <img class="sign" src="img/sign@2x.png" />
-      </a>
+    <div class="video-container">
+        <video id="miVideo" src="square.mp4" autoplay loop muted></video>
     </div>
-  </div>
-
+    <button id="audioButton" class="muted"></button>
+    <script src="script.js"></script>
 </body>
 </html>
