--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abad Federico * Human</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="video-container">
         <video id="miVideo" src="square.mp4" autoplay loop muted></video>
     </div>
     <button id="audioButton" class="muted"></button>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
