--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video id="miVideo" src="square.mp4" autoplay loop muted></video>
+        <video id="miVideo" src="img/square.mp4" autoplay loop muted></video>
     </div>
     <button id="audioButton" class="muted"></button>
     <script src="js/script.js"></script>
